通过表自动创建类

--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -69,7 +69,11 @@
             <artifactId>guava</artifactId>
             <version>28.2-jre</version>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.22</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
